--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
